[project]
name = "ravel-scheduler"
version = "0.1.0"
description = "Dead-simple GPU job queue."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8.1",
    "psutil",
    "rich",
    "docker"
]

[project.scripts]
ravel = "ravel.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["ravel"]